Missing background images fixed The images were shown locally but not at the live URL

--- a/assets/css/about us.css
+++ b/assets/css/about us.css
@@ -16,7 +16,7 @@ body {
 
 
 .jumbotron {
-  background-image: url(/assets/images/image3.jpg);
+  background-image: url(../images/image3.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
