--- a/assets/css/contact us-style.css
+++ b/assets/css/contact us-style.css
@@ -20,7 +20,7 @@
 }
 
 .jumbotron {
-  background-image: url(/assets/images/image3.jpg);
+  background-image: url(../images/image3.jpg);
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
